add sorting by query params for the endpoints: - introduce two new params `sort_by` and `sort_order` - update the sorting mechanism for farms/nodes/twins/contracts - update swagger docs
