# grid-proxy/docs/swagger.json
@@ -45,6 +45,35 @@
                         "in": "query"
                     },
                     {
+                        "type": "boolean",
+                        "description": "Get random patch of contracts",
+                        "name": "randomize",
+                        "in": "query"
+                    },
+                    {
+                        "enum": [
+                            "twin_id",
+                            "node_id",
+                            "type",
+                            "status",
+                            "..."
+                        ],
+                        "type": "string",
+                        "description": "Sort by specific contract filed",
+                        "name": "sort_by",
+                        "in": "query"
+                    },
+                    {
+                        "enum": [
+                            "desc",
+                            "asc"
+                        ],
+                        "type": "string",
+                        "description": "The sorting order, default is 'desc'",
+                        "name": "sort_order",
+                        "in": "query"
+                    },
+                    {
                         "type": "integer",
                         "description": "contract id",
                         "name": "contract_id",
@@ -459,6 +488,34 @@
                         "in": "query"
                     },
                     {
+                        "type": "boolean",
+                        "description": "Get random patch of gateways",
+                        "name": "randomize",
+                        "in": "query"
+                    },
+                    {
+                        "enum": [
+                            "free_mru",
+                            "total_cru",
+                            "free_ips",
+                            "..."
+                        ],
+                        "type": "string",
+                        "description": "Sort by specific gateway filed",
+                        "name": "sort_by",
+                        "in": "query"
+                    },
+                    {
+                        "enum": [
+                            "desc",
+                            "asc"
+                        ],
+                        "type": "string",
+                        "description": "The sorting order, default is 'desc'",
+                        "name": "sort_order",
+                        "in": "query"
+                    },
+                    {
                         "type": "integer",
                         "description": "Min free reservable mru in bytes",
                         "name": "free_mru",
@@ -687,6 +744,34 @@
                         "type": "boolean",
                         "description": "Set nodes' count on headers based on filter",
                         "name": "ret_count",
+                        "in": "query"
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "Get random patch of nodes",
+                        "name": "randomize",
+                        "in": "query"
+                    },
+                    {
+                        "enum": [
+                            "free_mru",
+                            "total_cru",
+                            "free_ips",
+                            "..."
+                        ],
+                        "type": "string",
+                        "description": "Sort by specific node filed",
+                        "name": "sort_by",
+                        "in": "query"
+                    },
+                    {
+                        "enum": [
+                            "desc",
+                            "asc"
+                        ],
+                        "type": "string",
+                        "description": "The sorting order, default is 'desc'",
+                        "name": "sort_order",
                         "in": "query"
                     },
                     {
@@ -1148,6 +1233,34 @@
                         "type": "boolean",
                         "description": "Set twins' count on headers based on filter",
                         "name": "ret_count",
+                        "in": "query"
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "Get random patch of twins",
+                        "name": "randomize",
+                        "in": "query"
+                    },
+                    {
+                        "enum": [
+                            "relay",
+                            "public_key",
+                            "account_id",
+                            "twin_id"
+                        ],
+                        "type": "string",
+                        "description": "Sort by specific twin filed",
+                        "name": "sort_by",
+                        "in": "query"
+                    },
+                    {
+                        "enum": [
+                            "desc",
+                            "asc"
+                        ],
+                        "type": "string",
+                        "description": "The sorting order, default is 'desc'",
+                        "name": "sort_order",
                         "in": "query"
                     },
                     {
